Fix overlap in portrait mode: title, rot. navi.
Simply remove non-zero font spacing in rotation navigator, to make it
narrower.

--- a/css/index.css
+++ b/css/index.css
@@ -144,7 +144,6 @@ body {
 
 #rotationsNavigator {
     font-weight: bold;
-    letter-spacing: 0.1em;
 }
 
 #hiscoresTableGroup {
